<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Atlas</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_daemon_start">Start daemon</string>
    
    <string name="year">Year</string>
    <string name="month">Month</string>
        
    <string name="amount">Amount</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="tag">Tag</string>
    
    <string name="outcome">Outcome</string>
    <string name="income">Income</string>
    
    <string name="tasks">Tasks</string>
    <string name="data">Data</string>
    <string name="guess">Guess</string>
    <string name="manual">Manual</string>
    <string name="category">Category</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="ignore">Ignore</string>
    
    <string name="food">Food</string>
    <string name="fuel">Fuel</string>
    <string name="fun">Fun</string>
    <string name="home">Home</string>
    
    <string name="credit">Credit</string>
    <string name="salary">Salary</string>
    <string name="gift">Gift</string>
    
    <string name="investment">Investment</string>
    <string name="payoff">Pay-off</string>
    
    <string name="tasks_to_solve_count" >Tasks: </string>
    <string name="auto_recognized_count">Guess: </string>
    <string name="finalized_data_count" >Data:  </string>
    
    <string name="choose_parent">Choose parent for</string>
    <string name="selected_parent">Selected parent:</string>
    <string name="default_amount">Default amount:</string>
    
    <string name="please_provide_data">Please provide the followings:</string>
    <string name="atlas_configuiration">Atlas configuration</string>
    
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="delete_this">Do you want to delete: </string> 
    <string name="ok">OK</string>
    
    <string-array name="BanksPreset">
        <item>Erste-debug</item>
        <item>Erste</item>
    </string-array>
    <string-array name="DatabasePreset">
        <item>SQLite3</item>
    </string-array>

</resources>