<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/details"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <TextView
            android:id="@+id/amountString"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:text="@string/amount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/taskAmount"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />
        
        <LinearLayout
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="id:" />

            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[id]" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tag:" />

            <TextView
                android:id="@+id/tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="[tag]" />
        </LinearLayout>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <TextView
            android:id="@+id/fromString"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/from"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/taskFrom"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
            android:layout_row="0"
            android:ems="10" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <TextView
            android:id="@+id/toString"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/to"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/taskTo"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="0"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <TextView
            android:id="@+id/dateString"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/taskDate"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
            android:layout_row="0"
            android:ems="10"
            android:inputType="date" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <Spinner
            android:layout_column="0"
            android:id="@+id/taskSpinner"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:spinnerMode="dropdown"/>

        <ImageView
            android:id="@+id/taskAdd"
            android:src="@android:drawable/ic_menu_add"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="1"
            android:onClick="addCat"
            android:text="@string/add"/>

        <ListView
            android:id="@+id/taskCats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical" >

        </ListView>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom" >

         <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/ignorebuttonItem"
            android:layout_weight="0.2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ignore"
            android:onClick="ignoreTask" />
         
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/savebuttonItem"
            android:layout_weight="0.3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveTask" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/exitbuttonItem"
            android:layout_weight="0.3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:onClick="exitTask" />

    </LinearLayout>

</GridLayout>