<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/choose_parent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/chooseparentfor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/detailcatRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/selected_parent"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/selectedParent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/default_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/defaultAmount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <View style="@style/HorizontalDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveCategory"
                android:text="@string/save" />

        </LinearLayout>

        <View style="@style/HorizontalDivider" />
    </LinearLayout>

</ScrollView>